Sortierbare Sektionen, zusätzliche Inventare, Rüstungskombinationen